<resources>
    <string name="app_name">GrabDealsShop</string>
    <string name="gcm_defaultSenderId">634688043028</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile_no">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_shop_name">Shop Name</string>
    <string name="prompt_enter_otp">Enter OTP</string>
    <string name="prompt_about_your_shop">About your shop</string>
    <string name="prompt_select_category">Select Category</string>
    <string name="prompt_website">website (e.g www.shopname.com)</string>
    <string name="prompt_location">Location/Area Name (e.g Ameerpet)</string>
    <string name="prompt_full_address">Full Address</string>
    <string name="prompt_phone_no">Phone Number</string>
    <string name="prompt_offer_title">Offer Title</string>
    <string name="prompt_start_date">Start Date</string>
    <string name="prompt_end_date">End Date</string>
    <string name="prompt_locations">Location (s)</string>
    <string name="prompt_offer_description">Offer Description</string>
    <string name="prompt_upload_offer_pics">Upload Offer Picture(s)</string>


    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_your_details">Forgot your details ?</string>
    <string name="action_create_new_acc">Create new account</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_create_new_shop">Create new shop</string>
    <string name="action_create_acc">Create account</string>
    <string name="action_already_acc_login">Already have account? Sign in </string>
    <string name="action_verify">Verify</string>
    <string name="action_resend_otp">Resend OTP</string>
    <string name="action_save_details">Save Details</string>
    <string name="action_add_details">Add Details</string>
    <string name="action_add_more_locations">+ Add more locations</string>
    <string name="action_post_an_offer">Post an Offer</string>

    <string name="msg_otp_resend">If you dont receive OTP after 30 seconds ,tap Resend OTP link</string>

    <string name="error_invalid_mobile">This mobile no is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_login">Login</string>
    <string name="title_activity_register_shop_keeper">Register ShopKeeper</string>
    <string name="title_activity_confirm_otp">Confirm OTP</string>
    <string name="title_activity_enter_shop_details">Enter Shop Details</string>
    <string name="title_activity_edit_shop_details">Edit Shop Details</string>
    <string name="title_activity_post_an_offer">Post an Offer</string>
    <string name="logout">logout</string>

    <string-array name="shop_categories">
        <item>Select Category</item>
        <item>Clothing &amp; Accessories</item>
        <item>Mobiles &amp; Electronics</item>
        <item>Drinks, Bar &amp; Pubs</item>
        <item>Food &amp; Restaurants</item>
    </string-array>

    <string-array name="shop_categories_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="offer_categories">
        <item>Select Category</item>
        <item>Clothing &amp; Accessories</item>
        <item>Drinks, Bar &amp; Pubs</item>
        <item>Food &amp; Restaurants</item>
        <item>Mobiles &amp; Electronics</item>
    </string-array>

    <string name="title_activity_main">Offers Factory</string>
    <string name="action_share">Share</string>
    <string name="action_fav">Favorite</string>

     <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="title_activity_offers_list">Offers</string>
    <string name="title_activity_offer_details">Offer details</string>
    <string name="action_search">Search</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="request_otp">Request OTP</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_main_drawer">Offers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_fullscreen_image">Offer Details</string>
    <string name="title_activity_add_edit_more_locations">Add More Locations</string>
</resources>
