<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.grabdeals.shop.ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/tool_bar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.grabdeals.shop.ui.EnterShopDetailsActivity">



        <ScrollView
            android:id="@+id/create_new_ac_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fields_margin">

                    <com.grabdeals.shop.util.NetworkImageViewRounded
                        android:id="@+id/image"
                        style="@style/ProfileImageView" />


                    <ImageView
                        android:background="@drawable/circle_background_shape"
                        android:id="@+id/iv_camera"
                        android:padding="6dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignBottom="@+id/image"
                        android:layout_alignEnd="@+id/image"
                        android:layout_alignRight="@+id/image"
                        android:src="@drawable/photo_camera" />
                    <TextView
                        android:layout_alignBottom="@+id/iv_camera"
                        android:layout_toEndOf="@+id/iv_camera"
                        android:layout_toRightOf="@+id/iv_camera"
                        android:text=" Upload shop photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <TextView
                    style="@style/TitleTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/title_activity_enter_shop_details"
                     />

                <View
                    style="@style/TitleViewLine"></View>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_about_your_shop"
                        android:imeOptions="actionNext"
                        android:inputType="textImeMultiLine"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_select_category"
                        android:entryValues="@array/shop_categories"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:imeOptions="actionNext"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_website"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionNext"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_location"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:focusableInTouchMode="false"

                         />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/full_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_full_address"
                        android:imeOptions="actionNext"
                        android:maxLines="3"
                         />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/fields_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phone_no"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/ll_dynamic_locs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <Button
                    android:id="@+id/btn_add_more_loc"
                    style="@style/TransButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/action_add_more_locations"
                    />
            <LinearLayout
                android:layout_marginLeft="@dimen/btn_margin_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_save_details"
                    style="@style/SubmitButton"
                    android:layout_width="match_parent"
                    android:text="@string/action_save_details" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>