<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.grabdeals.shop.ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/tool_bar"/>

    </android.support.design.widget.AppBarLayout>
<LinearLayout
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.grabdeals.shop.ui.ConfirmOTPActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_marginTop="@dimen/fields_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fields_margin">

                <ImageView
                    android:id="@+id/image_shop"
                    style="@style/ProfileImageView" />


                <ImageView
                    android:background="@drawable/circle_background_shape"
                    android:id="@+id/iv_camera"
                    android:padding="6dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignBottom="@+id/image_shop"
                    android:layout_alignEnd="@+id/image_shop"
                    android:layout_alignRight="@+id/image_shop"
                    android:src="@drawable/photo_camera" />
                <TextView
                    android:layout_alignBottom="@+id/iv_camera"
                    android:layout_toEndOf="@+id/iv_camera"
                    android:layout_toRightOf="@+id/iv_camera"
                    android:text=" Upload shop photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                style="@style/TitleTextViewStyle"
                android:text="Verify Phone number"/>
            <View
                style="@style/TitleViewLine"></View>

            <TextView
                android:layout_marginTop="@dimen/fields_margin"
                android:id="@+id/otp_sent_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OTP SMS sent to " />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/fields_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/enter_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_enter_otp"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/btn_verify"
                style="@style/SubmitButton"
                android:layout_width="match_parent"
                android:text="@string/action_verify"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_otp_resend"/>

            <Button
                android:layout_marginTop="@dimen/fields_margin"
                android:id="@+id/btn_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TransButton"
                android:text="@string/action_resend_otp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>